<resources>
    <string name="app_name">YouPlay</string>
    <string name="channel">Channel</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="double_dash_colon_double_dash">--:--</string>
    <string name="play_all">Play all</string>
    <string name="add_all">Add all</string>
    <string name="prev_text_icon"><![CDATA[|<<]]></string>
    <string name="header_image">Header image</string>
    <string name="channels">Channels</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="latest_videos">Latest videos</string>
    <string name="playlist">Playlist</string>
    <string name="show_all_channels">Show all channels</string>
    <string name="show_all">Show all</string>
    <string name="share_app">Share app</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="feedback">Feedback</string>
    <string name="music_vradio">Music vRadio</string>
    <string name="fun_vradio">Fun vRadio</string>
    <string name="play_music_vradio">Play Music vRadio</string>
    <string name="random_fun_videos">Random Fun Videos</string>
    <string name="channel_radio">Channel vRadio</string>
    <string name="channel_radio_caps">CHANNEL vRADIO</string>
    <string name="clear_queue">Clear queue</string>
    <string name="edit_queue">Edit queue</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>
    <string name="loading_">Loading…</string>
    <string name="splash_logo">Splash logo</string>
    <string name="no_playlist_found">No playlist found</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="queue">Queue</string>
    <string name="recommendations">Recommendations</string>

    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="stop_vradio">Stop vRadio</string>
    <string name="popular_videos">Popular Videos</string>
    <string name="latest_uploads">Latest Uploads</string>
    <string name="popular_uploads">Popular Uploads</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="i_love_this_app">I love this app…</string>
    <string name="no_favorites_found">Oops! Nothing here.\n Tap the heart icon when playing a video and find it here later.</string>
    <string name="no_history_found">Oops! Nothing here.\n Watch videos on YouPlay and find them here later.</string>
    <string name="search">Search</string>
    <string name="searching">Searching</string>
    <string name="search_placeholder">Search videos</string>
    <string name="no_results_found">No results found</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="please_try_again">Please try again</string>
    <string name="play_next">Play next</string>
    <string name="rate">Rate</string>
    <string name="notification">Notification</string>
    <string name="no_notifications">No notifications</string>
    <string name="open">Open</string>
    <string name="clear_search_text">Clear search text</string>
    <string name="share_video">Share video</string>
    <string name="open_channel">Open channel</string>
    <string name="featured_channels">Featured Channels</string>
    <string name="remove">Remove</string>
    <string name="drag_to_move">Drag to move</string>
    <string name="see_more">See more…</string>
    <string name="change_player_size">Change player size</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="play_top_videos">Play Top Videos</string>
    <string name="channel_vradio">Channel vRadio</string>
    <string name="start_vradio">START vRADIO</string>
    <string name="watch_history">Watch History</string>
    <string name="music_vradio_caps">MUSIC vRADIO</string>
    <string name="fun_vradio_caps">FUN vRADIO</string>
    <string name="clear_all">Clear All</string>
    <string name="edit_favourites">Edit Favourites</string>
    <string name="remove_video">Remove video</string>
    <string name="open_settings">Open Settings</string>
    <string name="dismiss">Dismiss</string>
    <string name="notification_setting_text">We regularly send great collections of entertaining videos to our users.
        If you\'re not receiving our notifications, please check your notification settings.</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="surprise_me">Surprise Me!</string>
    <string name="history">History</string>
    <string name="current_queue">Current queue</string>
    <string name="splash_background">Splash Background</string>
    <string name="featured_playlists">Featured Playlists</string>
    <string name="play_popular_videos">Play popular videos</string>
    <string name="input">Input</string>
    <string name="your_message_here">Your message here</string>
    <string name="say_something">Say something…</string>
    <string name="latest_music_videos">Latest Music Videos</string>
    <string name="latest_fun_videos">Latest Fun Videos</string>
    <string name="fun_playlists">Fun Playlists</string>
    <string name="popular_channels">Popular Channels</string>
    <string name="popular_playlists">Popular Playlists</string>
    <string name="popular_web_series">Popular Web-Series</string>
    <string name="video_details">Video details</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="change_size">Change size</string>
    <string name="close">Close</string>
    <string name="timer_placeholder">Enter minutes (10–1000)</string>
    <string name="timer_dialog_message">Video will stop playing after the set number of minutes. You can cancel the timer by closing the video.</string>
    <string name="timer">Timer</string>
</resources>
