<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/grey_100"
    android:orientation="vertical">

    <TextView
        android:id="@+id/no_history_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/no_history_found"
        android:textSize="18sp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_videos_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp" />

    <LinearLayout
        android:id="@+id/history_header_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true"
        android:background="@color/grey_300"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/history_video_count_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/light_grey" />

        <TextView
            android:id="@+id/history_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/clear_all"
            android:textAllCaps="true"
            android:textColor="@color/light_grey" />

        <TextView
            android:id="@+id/history_add_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/add_all"
            android:textAllCaps="true"
            android:textColor="@color/light_grey" />

        <TextView
            android:id="@+id/history_play_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/play_all"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</FrameLayout>

