<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@color/grey_100"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/notification_message_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="64dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/notification_settings"
                android:textColor="@color/grey_800"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_setting_text"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey_300" />

            <TextView
                android:id="@+id/open_notification_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/open_settings"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/notification_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>