<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/white">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/notification_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="2dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/channel_playlist_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/playlist_video_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.1"
                android:contentDescription="@string/video_thumbnail" />

            <TextView
                android:id="@+id/channel_playlist_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="8dp"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/playlist_video_count_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/channel_playlist_title"
                android:layout_marginEnd="18dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/playlist_play_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/play_all"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/playlist_add_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/playlist_play_all"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/add_all"
                android:textAllCaps="true"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>