<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/channel_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@color/grey_300"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/channel_home_thumbnail"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/channel_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/dark_grey"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/latest_uploads"
                android:textAllCaps="true"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@color/grey_300" />

            <TextView
                android:id="@+id/channel_latest_play_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:text="@string/play_all"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
        </LinearLayout>

        <include
            android:id="@+id/latest_video_loading_view"
            layout="@layout/loading_layout"
            android:visibility="visible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/channel_latest_videos_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:minHeight="300dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/channel_latest_videos_see_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/ic_key_arrow_down"
            android:textColor="@color/light_grey"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/popular_uploads"
                android:textAllCaps="true"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@color/grey_300" />

            <TextView
                android:id="@+id/channel_popular_play_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:text="@string/play_all"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <include
            android:id="@+id/popular_video_loading_view"
            layout="@layout/loading_layout"
            android:visibility="visible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/channel_popular_videos_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/play_channel_top_videos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_ripple_grey_border"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/play_popular_videos"
            android:textAllCaps="true"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:visibility="gone" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>